salesforce-cdp/1.2/modules/ROOT/pages/salesforce-cdp-connector-reference.adoc
= Salesforce Data Cloud Connector 1.2 Reference
:page-aliases: connectors::salesforc-cdp/salesforce-cdp-connector-reference.adoc

Anypoint Connector for Salesforce Data Cloud (Salesforce Data Cloud Connector) provides Mule users with a quick and easy way to integrate with Salesforce Data Cloud API endpoints. Users can automate data ingestion from third parties, query the Data Cloud Data Lake, search and query customer profile information and calculated insights, and consume data action events to enrich the 360-degree view of their customers in their Data Cloud instance.

== Configurations
---
[[SdcConfig]]
=== SDC Config


==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<SdcConfig_OauthJwt, OAuth JWT>>
* <<SdcConfig_OauthUserPass, OAuth Username Password>>
 | Connection types for this configuration. | | x
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  1 |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  MINUTES |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  AUTO |
| Name a| String | ID used to reference this configuration. |  | x
| Expiration Policy a| <<ExpirationPolicy>> | Configures an expiration policy for the configuration. |  |
|===

==== Connection Types
[[SdcConfig_OauthJwt]]
===== OAuth JWT

Custom connection provider for the OAuth JWT flow.

====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Default Headers a| Array of <<DefaultHeader>>. | Headers automatically added to every outbound request. |  |
| Query Parameters a| Array of <<DefaultQueryParam>>. | Query parameters automatically added to every outbound request. |  |
| Connection Timeout a| Number | How long the connector waits before timing out when initially establishing a connection to the remote service. |  30 |
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Connection Timeout* field. |  SECONDS |
| Use Persistent Connections a| Boolean | Indicates whether to use persistent connections:

* `true`

Mule uses persistent connections.

* `false`

Mule closes the connection after the first request completes. |  true |
| Max Connections a| Number | Maximum number of connections to open to the backend. HTTP requests are sent in parallel over multiple connections. Setting this value too high can impact latency and consume additional resources without increasing throughput. |  -1 |
| Connection Idle Timeout a| Number | When persistent connections are enabled, how long a connection can remain idle before Mule closes it. |  30 |
| Connection Idle Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Connection Timeout* field. |  SECONDS |
| Proxy Config a| <<Proxy>> | Configures a proxy for outbound connections. |  |
| Stream Response a| Boolean | If this value is `true`, Mule streams received responses. |  false |
| Response Buffer Size a| Number | Size of the buffer that stores the HTTP response, in bytes. |  -1 |
| Consumer key a| String | Consumer key for the Salesforce-connected app. |  | x
| Key store a| String | Path to the keystore used to sign data during authentication. |  | x
| Store password a| String | Password of the keystore. |  | x
| Certificate alias a| String | Alias of the certificate. |  | x
| Subject a| String | Username of the desired Salesforce user to take action on behalf of. |  | x
| Audience url a| String | Identifies the authorization server as an intended audience. |  | x
| Protocol a| Enumeration, one of:

** HTTP
** HTTPS | Protocol to use for communication. Valid values are `HTTP` and `HTTPS`. |  HTTP |
| TLS Configuration a| <<Tls>> | Configures TLS. If using the HTTPS protocol, you must configure TLS. |  |
| Reconnection a| <<Reconnection>> | When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===
[[SdcConfig_OauthUserPass]]
===== OAuth Username Password

Custom connection provider for the username and password flow.

====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Default Headers a| Array of <<DefaultHeader>>. | Headers automatically added to every outbound request. |  |
| Query Parameters a| Array of <<DefaultQueryParam>>. | Query parameters automatically added to every outbound request. |  |
| Connection Timeout a| Number | How long the connector waits before timing out when initially establishing a connection to the remote service. |  30 |
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Connection Timeout* field. |  SECONDS |
| Use Persistent Connections a| Boolean | Indicates whether to use persistent connections:

* `true`

Mule uses persistent connections.

* `false`

Mule closes the connection after the first request completes. |  true |
| Max Connections a| Number | Maximum number of connections to open to the backend. HTTP requests are sent in parallel over multiple connections. Setting this value too high can impact latency and consume additional resources without increasing throughput. |  -1 |
| Connection Idle Timeout a| Number | When persistent connections are enabled, how long a connection can remain idle before Mule closes it. |  30 |
| Connection Idle Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Connection Timeout* field. |  SECONDS |
| Proxy Config a| <<Proxy>> | Configures a proxy for outbound connections. |  |
| Stream Response a| Boolean | If this value is `true`, Mule streams received responses. |  false |
| Response Buffer Size a| Number | Size of the buffer that stores the HTTP response, in bytes. |  -1 |
| Consumer key a| String | Consumer key for the Salesforce-connected app. |  | x
| Consumer secret a| String | Your application's client secret (consumer secret in Remote Access Detail). |  | x
| Username a| String | Username used to initialize the session. |  | x
| Password a| String | Password used to authenticate the user. |  | x
| Audience url a| String | Identifies the authorization server as an intended audience. |  | x
| Protocol a| Enumeration, one of:

** HTTP
** HTTPS | Protocol to use for communication. Valid values are `HTTP` and `HTTPS`. |  HTTP |
| TLS Configuration a| <<Tls>> | Configures TLS. If using the HTTPS protocol, you must configure TLS. |  |
| Reconnection a| <<Reconnection>> | When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===

[[SdcWebhookConfig]]
=== Data Action Webhook Config


Configuration element for a Webhook Source.


==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<SdcWebhookConfig_Listener, Listener>>
| Connection types for this configuration. | | x
| Base Path a| String |  Base path to use for all requests that reference this configuration. |  |
| Name a| String |  ID of this element used for reference in other components |  | x
|===

==== Connection Types

[[SdcWebhookConfig_Listener]]
===== Listener

====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| TLS_Config a| <<Tls>> |  Reference to a TLS configuration element. Enables HTTPS for this configuration. |  |
| Protocol a| Enumeration, one of:

** HTTP
** HTTPS |  Protocol to use for communication. When using HTTPS, the HTTP communication is secured using TLS or SSL. If HTTPS is configured as the protocol, the user must configure the keystore in the `tls:context` child element of this listener configuration. |  HTTP |
| Host a| String |  Host in which the requests are sent. |  | x
| Port a| Number |  Port in which the requests are received. |  | x
| Use Persistent Connections a| Boolean |  If `false`, each connection is closed after the first request is completed. |  true |
| Connection Idle Timeout a| Number |  Number of milliseconds that a connection can remain idle before it is closed. The value of this attribute is used only when persistent connections are enabled. The listener default timeout is bigger than our requester default timeout to avoid the `Remotely closed` exception when sending a request to an existing connection before the timeout occurs. |  40000 |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===


== Associated Operations

* <<CreateBulkJob>>
* <<DeleteBulkJob>>
* <<DeleteObjects>>
* <<GetAllCalculatedInsightMetadata>>
* <<GetBulkJob>>
* <<GetCalculatedInsightMetadata>>
* <<GetCalculatedInsightWithFiltersFieldsAndLimit>>
* <<GetComputedViewForProfile>>
* <<GetMeta>>
* <<GetMetaByCategory>>
* <<GetParent>>
* <<GetParentAndChild>>
* <<GetParentWithFilters>>
* <<InsertObjects>>
* <<Query>>
* <<UpdateBulkOperationJob>>
* <<UploadDataBulkJob>>


== Associated Sources

* <<WebhookSource>>

== Operations

[[CreateBulkJob]]
== Bulk - Create Job
`<sdc:create-bulk-job>`


Creates a job that represents the bulk operation for sending data to Salesforce Data Cloud for asynchronous processing. This operation makes an HTTP POST request to the /ingest/jobs endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Source API name a| String | Name of the ingestion source API to work with. |  | x
| Object name a| String | Name of object to work with. |  | x
| Operation a| Enumeration, one of:

** delete
** upsert | Operation to execute. |  | x
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<SdcConfig>>

=== Throws

* SDC:BAD_REQUEST
* SDC:CLIENT_ERROR
* SDC:CONNECTIVITY
* SDC:INTERNAL_SERVER_ERROR
* SDC:NOT_ACCEPTABLE
* SDC:NOT_FOUND
* SDC:RETRY_EXHAUSTED
* SDC:SERVER_ERROR
* SDC:SERVICE_UNAVAILABLE
* SDC:TIMEOUT
* SDC:TOO_MANY_REQUESTS
* SDC:UNAUTHORIZED
* SDC:UNSUPPORTED_MEDIA_TYPE


[[DeleteBulkJob]]
== Bulk - Delete Job
`<sdc:delete-bulk-job>`


Deletes the job for the specified job ID. This operation makes an HTTP DELETE request to the /ingest/jobs/{id} endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Job ID a| String | Job ID returned in the response body from the *Create Job* request. |  | x
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component. |  | x
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  #[null] |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |

| Target Value a| String | Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | {nbsp}

| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<SdcConfig>>

=== Throws

* SDC:BAD_REQUEST
* SDC:CLIENT_ERROR
* SDC:CONNECTIVITY
* SDC:INTERNAL_SERVER_ERROR
* SDC:NOT_ACCEPTABLE
* SDC:NOT_FOUND
* SDC:RETRY_EXHAUSTED
* SDC:SERVER_ERROR
* SDC:SERVICE_UNAVAILABLE
* SDC:TIMEOUT
* SDC:TOO_MANY_REQUESTS
* SDC:UNAUTHORIZED
* SDC:UNSUPPORTED_MEDIA_TYPE

[[DeleteObjects]]
== Streaming - Delete Objects
`<sdc:delete-objects>`


Deletes one or more records from Salesforce Data Cloud. This operation makes an HTTP DELETE request to the /ingest/sources/{source-name}/{object-name} endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Source API name a| String | Ingest source API name. |  | x
| Object name a| String | Name of the collection to delete data from. |  | x
| IDs a| Array of String | Comma-separated list of IDs to delete. |  | x
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  #[null] |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<SdcConfig>>

=== Throws

* SDC:BAD_REQUEST
* SDC:CLIENT_ERROR
* SDC:CONNECTIVITY
* SDC:INTERNAL_SERVER_ERROR
* SDC:NOT_ACCEPTABLE
* SDC:NOT_FOUND
* SDC:RETRY_EXHAUSTED
* SDC:SERVER_ERROR
* SDC:SERVICE_UNAVAILABLE
* SDC:TIMEOUT
* SDC:TOO_MANY_REQUESTS
* SDC:UNAUTHORIZED
* SDC:UNSUPPORTED_MEDIA_TYPE


[[GetAllCalculatedInsightMetadata]]
== Insights - List Metadata
`<sdc:get-all-calculated-insight-metadata>`

The metadata includes the dimension and measure that are part of the calculated insight. This operation makes an HTTP GET request to the /insight/metadata endpoint.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | {nbsp}

| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<SdcConfig>>

=== Throws

* SDC:BAD_REQUEST
* SDC:CLIENT_ERROR
* SDC:CONNECTIVITY
* SDC:INTERNAL_SERVER_ERROR
* SDC:NOT_ACCEPTABLE
* SDC:NOT_FOUND
* SDC:RETRY_EXHAUSTED
* SDC:SERVER_ERROR
* SDC:SERVICE_UNAVAILABLE
* SDC:TIMEOUT
* SDC:TOO_MANY_REQUESTS
* SDC:UNAUTHORIZED
* SDC:UNSUPPORTED_MEDIA_TYPE


[[GetBulkJob]]
== Bulk - Get Job
`<sdc:get-bulk-job>`


Retrieves the job details for the specified job ID. This operation makes an HTTP GET request to the /api/v1/ingest/jobs/{id} endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Job ID a| String | Job ID returned in the response body from the *Create Job* request. |  | x
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  #[null] |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<SdcConfig>>

=== Throws

* SDC:BAD_REQUEST
* SDC:CLIENT_ERROR
* SDC:CONNECTIVITY
* SDC:INTERNAL_SERVER_ERROR
* SDC:NOT_ACCEPTABLE
* SDC:NOT_FOUND
* SDC:RETRY_EXHAUSTED
* SDC:SERVER_ERROR
* SDC:SERVICE_UNAVAILABLE
* SDC:TIMEOUT
* SDC:TOO_MANY_REQUESTS
* SDC:UNAUTHORIZED
* SDC:UNSUPPORTED_MEDIA_TYPE


[[GetCalculatedInsightMetadata]]
== Insights - Get Metadata
`<sdc:get-calculated-insight-metadata>`

The metadata includes the dimension and measure that are part of the calculated insight. This operation makes an HTTP GET request to the /insight/metadata/{ci-name} endpoint.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| ci_name a| String |  Calculated insight name, for example, `IndividualChildrenCount__cio`. |  | x
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | {nbsp}

| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
| Type a| Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<SdcConfig>>

=== Throws

* SDC:BAD_REQUEST
* SDC:CLIENT_ERROR
* SDC:CONNECTIVITY
* SDC:INTERNAL_SERVER_ERROR
* SDC:NOT_ACCEPTABLE
* SDC:NOT_FOUND
* SDC:RETRY_EXHAUSTED
* SDC:SERVER_ERROR
* SDC:SERVICE_UNAVAILABLE
* SDC:TIMEOUT
* SDC:TOO_MANY_REQUESTS
* SDC:UNAUTHORIZED
* SDC:UNSUPPORTED_MEDIA_TYPE


[[GetCalculatedInsightWithFiltersFieldsAndLimit]]
== Insights - Get Insights
`<sdc:get-calculated-insight-with-filters-fields-and-limit>`

Use this API to query the calculated insights. Users can slice, dice, and filter by selecting different dimensions, measures, and filters. This operation makes an HTTP GET request to the /insight/calculated-insights/{ci-name} endpoint.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| ci_name a| String |  Calculated insight name. |  | x
| dimensions a| String |  Comma-separated list of dimensions to project. By default, this parameter includes all of the available dimensions. |  |
| measures a| String |  Comma-separated list of measures to project. By default, this parameter includes all of the available measures. |  |
| limit a| Number |  Number of items to return. The maximum number of items to return is 4999. | 4999 |
| offset a| Number |  Number of rows to skip before starting to return. |  |
| filters a| String |  This parameter is added to a select query to select only results of a specific type. |  |
| orderby a| String |  Comma-separated values to sort the result set  in ascending or descending order. |  |
| timeGranularity a| Enumeration, one of:

** HOUR
** DAY
** MONTH
** QUARTER
** YEAR |  User-specified granularity if *ci* has one or more time dimensions available. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | {nbsp}

| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
| Type a| Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<SdcConfig>>

=== Throws

* SDC:BAD_REQUEST
* SDC:CLIENT_ERROR
* SDC:CONNECTIVITY
* SDC:INTERNAL_SERVER_ERROR
* SDC:NOT_ACCEPTABLE
* SDC:NOT_FOUND
* SDC:RETRY_EXHAUSTED
* SDC:SERVER_ERROR
* SDC:SERVICE_UNAVAILABLE
* SDC:TIMEOUT
* SDC:TOO_MANY_REQUESTS
* SDC:UNAUTHORIZED
* SDC:UNSUPPORTED_MEDIA_TYPE


[[GetComputedViewForProfile]]
== Profile - Search Records With Insight
`<sdc:get-computed-view-for-profile>`

Returns data model objects and a computed view based on indexes and search filters. This operation makes an HTTP GET request to the /profile/{dataModelName}/{id}/calculated-insights/{ci_name} endpoint.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| dataModelName a| String |  Data model object API name. |  | x
| id a| String |  Value of an indexed column. |  | x
| ci_name a| String |  Calculated insight name. |  | x
| searchKey a| String |  Index name if an object's ID is different from the primary key. |  |
| dimensions a| String |  Comma-separated name of the dimensions to be a part of the result from the computed view. By default, this parameter includes all the dimensions. |  |
| measures a| String |  Comma-separated name of the measures to be a part of the result from the computed view. By default, this parameter includes all the measures. |  |
| limit a| Number |  Number of items to return. |  |
| filters a| String |  Filters are applied only on the parent object. |  |
| offset a| Number |  Number of rows to skip before starting to return. |  |
| orderby a| String |  Comma-separated values to sort the result set  in ascending or descending order. |  |
| timeGranularity a| Enumeration, one of:

** HOUR
** DAY
** MONTH
** QUARTER
** YEAR |  User-specified granularity if *ci* has one or more time dimensions available. |  |
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
 Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | {nbsp}

| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<SdcConfig>>

=== Throws

* SDC:BAD_REQUEST
* SDC:CLIENT_ERROR
* SDC:CONNECTIVITY
* SDC:INTERNAL_SERVER_ERROR
* SDC:NOT_ACCEPTABLE
* SDC:NOT_FOUND
* SDC:RETRY_EXHAUSTED
* SDC:SERVER_ERROR
* SDC:SERVICE_UNAVAILABLE
* SDC:TIMEOUT
* SDC:TOO_MANY_REQUESTS
* SDC:UNAUTHORIZED
* SDC:UNSUPPORTED_MEDIA_TYPE


[[GetMeta]]
== Profile - Get Metadata
`<sdc:get-meta>`

Returns the metadata for the data model object. The metadata includes the list of fields, data types, and indexes available for lookup. This operation makes an HTTP GET request to the /profile/metadata/{dataModelName} endpoint.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| dataModelName a| String |  Data model object API name. |  | x
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
| Type a| Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<SdcConfig>>

=== Throws

* SDC:BAD_REQUEST
* SDC:CLIENT_ERROR
* SDC:CONNECTIVITY
* SDC:INTERNAL_SERVER_ERROR
* SDC:NOT_ACCEPTABLE
* SDC:NOT_FOUND
* SDC:RETRY_EXHAUSTED
* SDC:SERVER_ERROR
* SDC:SERVICE_UNAVAILABLE
* SDC:TIMEOUT
* SDC:TOO_MANY_REQUESTS
* SDC:UNAUTHORIZED
* SDC:UNSUPPORTED_MEDIA_TYPE


[[GetMetaByCategory]]
== Profile - List Metadata
`<sdc:get-meta-by-category>`

Returns the list of data model objects, their fields, and category. This operation makes an HTTP GET request to the /profile/metadata endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | {nbsp}

| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<SdcConfig>>

=== Throws

* SDC:BAD_REQUEST
* SDC:CLIENT_ERROR
* SDC:CONNECTIVITY
* SDC:INTERNAL_SERVER_ERROR
* SDC:NOT_ACCEPTABLE
* SDC:NOT_FOUND
* SDC:RETRY_EXHAUSTED
* SDC:SERVER_ERROR
* SDC:SERVICE_UNAVAILABLE
* SDC:TIMEOUT
* SDC:TOO_MANY_REQUESTS
* SDC:UNAUTHORIZED
* SDC:UNSUPPORTED_MEDIA_TYPE

[[GetNextBatchAnsiSqlV2]]
== Query v2 - Get Next Batch
`<sdc:get-next-batch-ansi-sql-v2>`

Returns the next batch of data from the initial POST request.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | *x*
| Next Batch Id a| String |  Get next batch of data using batchId. |  | *x*
| Enable arrow stream a| Enumeration is one of:

** TRUE
** FALSE |  Determines whether to get the response data in arrow stream or JSON format. A value of `true` returns the data in arrow stream format. |  FALSE | {nbsp}
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | *x*{nbsp}
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. The default is to use repeatable streams. |  | 
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration.  |  #[null] | 
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  | 
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  | 
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |   Time unit for the *Response Timeout* field. |  | 
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER a|  How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  | 
| Target Variable a| String | Name of the variable that stores the operation's output. |  | 
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field.  |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Any
| *Attributes Type* a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<SdcConfig>> {nbsp}

=== Throws

* SDC:BAD_REQUEST {nbsp}
* SDC:CLIENT_ERROR {nbsp}
* SDC:CONNECTIVITY {nbsp}
* SDC:INTERNAL_SERVER_ERROR {nbsp}
* SDC:NOT_ACCEPTABLE {nbsp}
* SDC:NOT_FOUND {nbsp}
* SDC:RETRY_EXHAUSTED {nbsp}
* SDC:SERVER_ERROR {nbsp}
* SDC:SERVICE_UNAVAILABLE {nbsp}
* SDC:TIMEOUT {nbsp}
* SDC:TOO_MANY_REQUESTS {nbsp}
* SDC:UNAUTHORIZED {nbsp}
* SDC:UNSUPPORTED_MEDIA_TYPE {nbsp}

[[GetParent]]
== Profile - Search Records By Id
`<sdc:get-parent>`

Returns data model objects based on search indexes and filters. Use this API call to retrieve the object record based on the primary key or secondary keys. Returns an empty list when records are not found. This operation makes an HTTP GET request to the /profile/{dataModelName}/{id} endpoint.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| dataModelName a| String |  Data model object API name. |  | x
| Id a| String |  Value of the primary or secondary key field. Defaults to the primary key when not specified. |  | x
| searchKey a| String |  Name of the key field, if a field other than the primary key is used. |  |
| fields a| String |  Distinct comma-separated name of fields to include in the result. Not specifying this parameter returns an arbitrary set of fields. |  |
| filters a| String |  Set of comma-separated equality expressions, within square brackets. |  |
| limit a| Number |  Numbers of records to return. |  |
| orderby a| String |  Comma-separated values to sort the result set  in ascending or descending order. This field is available in API version 52.0 and later. |  |
| offset a| Number |  Number of rows to skip before starting to return. This field is available in API version 52.0 and later. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | {nbsp}
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
| Type a| Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<SdcConfig>>

=== Throws

* SDC:BAD_REQUEST
* SDC:CLIENT_ERROR
* SDC:CONNECTIVITY
* SDC:INTERNAL_SERVER_ERROR
* SDC:NOT_ACCEPTABLE
* SDC:NOT_FOUND
* SDC:RETRY_EXHAUSTED
* SDC:SERVER_ERROR
* SDC:SERVICE_UNAVAILABLE
* SDC:TIMEOUT
* SDC:TOO_MANY_REQUESTS
* SDC:UNAUTHORIZED
* SDC:UNSUPPORTED_MEDIA_TYPE



[[GetParentAndChild]]
== Profile - Search Records With Child Records
`<sdc:get-parent-and-child>`

Returns data model objects and child objects based on indexes and search filters. This operation makes an HTTP GET request to the /profile/{dataModelName}/{id}/{childDataModelName} endpoint.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| dataModelName a| String |  Data model object API name. |  | x
| id a| String |  Value of an indexed column. |  | x
| childDataModelName a| String |  Child data model object API name. |  | x
| searchKey a| String |  Index name if an object's ID is different from the primary key. |  |
| fields a| String |  Comma-separated name of the fields of the result from the child entity. If unspecified, the first ten alphabetically-sorted fields are given. |  |
| limit a| Number |  Numbers of items to return. |  |
| filters a| String |  Filters are applied only on the parent object. |  |
| offset a| Number |  Number of rows to skip before starting to return. |  |
| orderby a| String |  Comma-separated values to sort the result set  in ascending or descending order. |  |
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | {nbsp}
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<SdcConfig>>

=== Throws

* SDC:BAD_REQUEST
* SDC:CLIENT_ERROR
* SDC:CONNECTIVITY
* SDC:INTERNAL_SERVER_ERROR
* SDC:NOT_ACCEPTABLE
* SDC:NOT_FOUND
* SDC:RETRY_EXHAUSTED
* SDC:SERVER_ERROR
* SDC:SERVICE_UNAVAILABLE
* SDC:TIMEOUT
* SDC:TOO_MANY_REQUESTS
* SDC:UNAUTHORIZED
* SDC:UNSUPPORTED_MEDIA_TYPE


[[GetParentWithFilters]]
== Profile - Search Records
`<sdc:get-parent-with-filters>`

Returns data model objects based on search filters. Use this API call to retrieve the object records after applying the selected filters. This operation makes an HTTP GET request to the /profile/{dataModelName} endpoint.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| dataModelName a| String |  Data model object API name. |  | x
| filters a| String |  Set of comma-separated equality expressions, in square brackets. |  | x
| fields a| String |  Distinct comma-separated name of fields to include in the result. If unspecified, this parameter returns an arbitrary set of fields. |  |
| limit a| Number |  Numbers of records to return. |  |
| orderby a| String |  Comma-separated values to sort the result set  in ascending or descending order. This field is available in API version 52.0 and later. |  |
| offset a| Number |  Number of rows to skip before starting to return. This field is available in API version 52.0 and later. |  |
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | {nbsp}
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<SdcConfig>>

=== Throws

* SDC:BAD_REQUEST
* SDC:CLIENT_ERROR
* SDC:CONNECTIVITY
* SDC:INTERNAL_SERVER_ERROR
* SDC:NOT_ACCEPTABLE
* SDC:NOT_FOUND
* SDC:RETRY_EXHAUSTED
* SDC:SERVER_ERROR
* SDC:SERVICE_UNAVAILABLE
* SDC:TIMEOUT
* SDC:TOO_MANY_REQUESTS
* SDC:UNAUTHORIZED
* SDC:UNSUPPORTED_MEDIA_TYPE




[[InsertObjects]]
== Streaming - Insert Objects
`<sdc:insert-objects>`


Creates new records or updates existing records in Salesforce Data Cloud. This operation makes an HTTP POST request to the /ingest/connectors/{connector-name}/{object-name} endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Source API name a| String | Ingest source API name. |  | x
| Object name a| String | Name of the collection to load data into. |  | x
| Body a| Any | Content to use. |  #[payload] |
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | {nbsp}
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<SdcConfig>>

=== Throws

* SDC:BAD_REQUEST
* SDC:CLIENT_ERROR
* SDC:CONNECTIVITY
* SDC:INTERNAL_SERVER_ERROR
* SDC:NOT_ACCEPTABLE
* SDC:NOT_FOUND
* SDC:RETRY_EXHAUSTED
* SDC:SERVER_ERROR
* SDC:SERVICE_UNAVAILABLE
* SDC:TIMEOUT
* SDC:TOO_MANY_REQUESTS
* SDC:UNAUTHORIZED
* SDC:UNSUPPORTED_MEDIA_TYPE




[[Query]]
== Query
`<sdc:query>`


Executes a query against the specified object and returns data that matches the specified criteria. This operation makes an HTTP POST request to the /query endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Body a| Any | Content to use. |  #[payload] |
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<SdcConfig>>

=== Throws

* SDC:BAD_REQUEST
* SDC:CLIENT_ERROR
* SDC:CONNECTIVITY
* SDC:INTERNAL_SERVER_ERROR
* SDC:NOT_ACCEPTABLE
* SDC:NOT_FOUND
* SDC:RETRY_EXHAUSTED
* SDC:SERVER_ERROR
* SDC:SERVICE_UNAVAILABLE
* SDC:TIMEOUT
* SDC:TOO_MANY_REQUESTS
* SDC:UNAUTHORIZED
* SDC:UNSUPPORTED_MEDIA_TYPE

[[QueryAnsiSqlV2]]
== Query v2
`<sdc:query-ansi-sql-v2>`

Query V2 supports SQL queries in ANSI standard and returns results as an array of records. The expected input when calling this API is free-form SQL. The input objects include data stream, profile and engagement data model objects, and unified data model objects. 

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | *x*{nbsp}
| Enable arrow stream a| Enumeration, one of:

** TRUE
** FALSE | Determines whether to get the response data in arrow stream or JSON format. A value of `true` returns the data in arrow stream format. |  FALSE | 
| Body a| Any |  |  #[payload] | 
| Config Ref a| ConfigurationProvider | Name of the configuration to use to execute this component. |  | *x*
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. The default is to use repeatable streams. |  | 
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  | 
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  | 
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  | 
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  | 
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER a|  How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  | 
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Any
| *Attributes Type* a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<SdcConfig>> {nbsp}

=== Throws

* SDC:BAD_REQUEST {nbsp}
* SDC:CLIENT_ERROR {nbsp}
* SDC:CONNECTIVITY {nbsp}
* SDC:INTERNAL_SERVER_ERROR {nbsp}
* SDC:NOT_ACCEPTABLE {nbsp}
* SDC:NOT_FOUND {nbsp}
* SDC:RETRY_EXHAUSTED {nbsp}
* SDC:SERVER_ERROR {nbsp}
* SDC:SERVICE_UNAVAILABLE {nbsp}
* SDC:TIMEOUT {nbsp}
* SDC:TOO_MANY_REQUESTS {nbsp}
* SDC:UNAUTHORIZED {nbsp}
* SDC:UNSUPPORTED_MEDIA_TYPE {nbsp}

[[UpdateBulkOperationJob]]
== Bulk - Close / Abort Job
`<sdc:update-bulk-operation-job>`


Closes or aborts a job given its ID. This operation makes an HTTP PATCH request to the /ingest/jobs/{id} endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Job ID a| String | Job ID returned in the response body from the *Create Job* request. |  | x
| State a| Enumeration, one of:

** Aborted
** UploadComplete | New state for the job. |  | x
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | {nbsp}
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<SdcConfig>>

=== Throws

* SDC:BAD_REQUEST
* SDC:CLIENT_ERROR
* SDC:CONNECTIVITY
* SDC:INTERNAL_SERVER_ERROR
* SDC:NOT_ACCEPTABLE
* SDC:NOT_FOUND
* SDC:RETRY_EXHAUSTED
* SDC:SERVER_ERROR
* SDC:SERVICE_UNAVAILABLE
* SDC:TIMEOUT
* SDC:TOO_MANY_REQUESTS
* SDC:UNAUTHORIZED
* SDC:UNSUPPORTED_MEDIA_TYPE



[[UploadDataBulkJob]]
== Bulk - Upload Job Data
`<sdc:upload-data-bulk-job>`


Uploads data for a job using CSV data you provide. This operation makes an HTTP PUT request to the /ingest/jobs/{id}/batches endpoint.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| id a| String |  Job ID returned in the response body from the *Create Job* request. |  | x
| Body a| String |  Content to use. |  #[payload] |
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | {nbsp}
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
| Type a| Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<SdcConfig>>

=== Throws

* SDC:BAD_REQUEST
* SDC:CLIENT_ERROR
* SDC:CONNECTIVITY
* SDC:INTERNAL_SERVER_ERROR
* SDC:NOT_ACCEPTABLE
* SDC:NOT_FOUND
* SDC:RETRY_EXHAUSTED
* SDC:SERVER_ERROR
* SDC:SERVICE_UNAVAILABLE
* SDC:TIMEOUT
* SDC:TOO_MANY_REQUESTS
* SDC:UNAUTHORIZED
* SDC:UNSUPPORTED_MEDIA_TYPE

== Sources

[[WebhookListener]]
== Data Action Webhook
`<sdc:webhook-listener>`
Listener for Salesforce Data Cloud Data Action Webhook.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Path a| String |  Relative path from MuleSoft Salesforce Data Cloud Data Action Webhook configuration. |  / |
| Signing Key a| String |  Secret key copied from Salesforce Data Cloud Data Action Target. |  | x
| Signing Algorithm a| Enumeration, one of:

** HmacSHA256 |  Signing algorithm copied from Salesforce Data Cloud Data Action Target. |  | x
| Output Mime Type a| String |  MIME type of the payload that the operation outputs. |  |
| On Capacity Overload a| Enumeration, one of:

** FAIL
** DROP |  Strategy applied by the runtime when the flow receives more messages than it has the capacity to handle. |  FAIL | {nbsp}
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component. |  | x
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| String
|===

=== For Configurations

* <<SdcWebhookConfig>>



== Types

[[DefaultHeader]]
=== Default Header

Headers automatically added to every outbound request.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key a| String | Key for this type. |  | x
| Value a| String | Value for this type. |  | x
|===

[[DefaultQueryParam]]
=== Default Query Param

Query parameters automatically added to every outbound request.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key a| String | Key for this type. |  | x
| Value a| String | Value for this type. |  | x
|===

[[Proxy]]
=== Proxy

Configures the settings used to connect through a proxy.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Host a| String | Hostname or IP address of the proxy server. |  | x
| Port a| Number | Port of the proxy server. |  | x
| Username a| String | Username to authenticate against the proxy server. |  |
| Password a| String | Password to authenticate against the proxy server. |  |
| Non Proxy Hosts a| String |  |  |
|===

[[Tls]]
=== TLS

Configures TLS to provide secure communications for the Mule app.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | Comma-separated list of protocols enabled for this context. |  |
| Enabled Cipher Suites a| String | Comma-separated list of cipher suites enabled for this context. |  |
| Trust Store a| <<TrustStore>> | Configures the TLS truststore. |  |
| Key Store a| <<KeyStore>> | Configures the TLS keystore. |  |
| Revocation Check a| * <<StandardRevocationCheck>>
* <<CustomOcspResponder>>
* <<CrlFile>> | Configures how to validate certificates. |  |
|===

[[TrustStore]]
=== Truststore

Configures the truststore for TLS.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the truststore. Mule resolves the path relative to the current classpath and file system, if possible. |  |
| Password a| String | Password used to protect the truststore. |  |
| Type a| String | Type of truststore. |  |
| Algorithm a| String | Encryption algorithm that the truststore uses. |  |
| Insecure a| Boolean | If `true`, Mule stops performing certificate validations. Setting this to `true` can make connections vulnerable to attacks. |  |
|===

[[KeyStore]]
=== Keystore

Configures the keystore for the TLS protocol. The keystore you generate contains a private key and a public certificate.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the keystore. Mule resolves the path relative to the current classpath and file system, if possible. |  |
| Type a| String | Type of store used. |  |
| Alias a| String | Alias of the key to use when the keystore contains multiple private keys. By default, Mule uses the first key in the file. |  |
| Key Password a| String | Password used to protect the private key. |  |
| Password a| String | Password used to protect the keystore. |  |
| Algorithm a| String | Encryption algorithm that the keystore uses. |  |
|===

[[StandardRevocationCheck]]
=== Standard Revocation Check

Configures standard revocation checks for TLS certificates.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Which elements to verify in the certificate chain:

* `true`
+
Verify only the last element in the certificate chain.

* `false`
+
Verify all elements in the certificate chain. |  |
| Prefer Crls a| Boolean | How to check certificate validity:

* `true`
+
Check the Certification Revocation List (CRL) for certificate validity.

* `false`
+
Use the Online Certificate Status Protocol (OCSP) to check certificate validity. |  |
| No Fallback a| Boolean | Whether to use the secondary method to check certificate validity:

* `true`
+
Use the method that wasn't specified in the *Prefer Crls* field (the secondary method) to check certificate validity.

* `false`
+
Do not use the secondary method to check certificate validity. |  |
| Soft Fail a| Boolean | What to do if the revocation server can't be reached or is busy:

* `true`
+
Avoid verification failure.

* `false`
+
Allow the verification to fail. |  |
|===

[[CustomOcspResponder]]
=== Custom OCSP Responder

Configures a custom OCSP responder for certification revocation checks.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | URL of the OCSP responder. |  |
| Cert Alias a| String | Alias of the signing certificate for the OCSP response. If specified, the alias must be in the truststore. |  |
|===

[[CrlFile]]
=== CRL File

Specifies the location of the certification revocation list (CRL) file.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the CRL file. |  |
|===

[[Reconnection]]
=== Reconnection

Configures a reconnection strategy for an operation.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | What to do if, when an app is deployed, a connectivity test does not pass after exhausting the associated reconnection strategy:

* `true`
+
Allow the deployment to fail.

* `false`
+
Ignore the results of the connectivity test. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Reconnection strategy to use. |  |
|===

[[Reconnect]]
=== Reconnect

Configures a standard reconnection strategy, which specifies how often to reconnect and how many reconnection attempts the connector source or operation can make.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to attempt to reconnect, in milliseconds. |  |
| Blocking a| Boolean | If `false`, the reconnection strategy runs in a separate, non-blocking thread. |  |
| Count a| Number | How many reconnection attempts the Mule app can make. |  |
|===

[[ReconnectForever]]
=== Reconnect Forever

Configures a forever reconnection strategy by which the connector operation source or operation attempts to reconnect at a specified frequency for as long as the Mule app runs.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often the Mule app attempts to reconnect to the remote service or API, in milliseconds. |  |
| Blocking a| Boolean | If `false`, the reconnection strategy runs in a separate, non-blocking thread. |  |
|===

[[ExpirationPolicy]]
=== Expiration Policy

Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance is allowed to be idle before it is considered eligible for expiration. |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Max Idle Time* field. |  |
|===

[[HttpResponseAttributes]]
=== HTTP Response Attributes

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Status Code a| Number |  |  | x
| Headers a| Object |  |  | x
| Reason Phrase a| String |  |  | x
|===

[[RepeatableInMemoryStream]]
=== Repeatable In Memory Stream

Configures the in-memory streaming strategy by which the request fails if the data exceeds the buffer size. Always run performance tests to find the optimal buffer size for your specific use case.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | The amount of memory that will be allocated to consume the stream and provide random access to it. If the stream contains more data than can be fit into this buffer, then the buffer expands according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. |  |
| Buffer Size Increment a| Number | Amount by which the buffer size expands if it exceeds its initial size. Setting a value of `0` or lower specifies that the buffer can't expand. |  |
| Max Buffer Size a| Number | The maximum amount of memory to use. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised. A value lower than or equal to zero means no limit. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | Unit for the *Initial Buffer Size*, *Buffer Size Increment*, and *Buffer Unit* fields. |  |
|===

[[RepeatableFileStoreStream]]
=== Repeatable File Store Stream

Configures the repeatable file-store streaming strategy by which Mule keeps a portion of the stream content in memory. If the stream content is larger than the configured buffer size, Mule backs up the buffer’s content to disk and then clears the memory.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Size a| Number | Maximum amount of memory that the stream can use for data. If the amount of memory exceeds this value, Mule buffers the content to disk. To optimize performance:

* Configure a larger buffer size to avoid the number of times Mule needs to write the buffer on disk. This increases performance, but it also limits the number of concurrent requests your application can process, because it requires additional memory.

* Configure a smaller buffer size to decrease memory load at the expense of response time. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | Unit for the *In Memory Size* field. |  |
|===

[[ErrorMapping]]
=== Error Mapping

In each operation of your Mule flow, you can map the possible error types to a custom error type of your choosing. 

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|===
| Field | Type | Description | Default Value | Required
| Source a| Enumeration, one of:

** ANY
** REDELIVERY_EXHAUSTED
** TRANSFORMATION
** EXPRESSION
** SECURITY
** CLIENT_SECURITY
** SERVER_SECURITY
** ROUTING
** CONNECTIVITY
** RETRY_EXHAUSTED
** TIMEOUT |  |  | 
| Target a| String |  |  | x
|===

[[RedeliveryPolicy]]
=== Redelivery Policy

Configures the redelivery policy for executing requests that generate errors. You can add a redelivery policy to any source in a flow.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Redelivery Count a| Number | Maximum number of times that a redelivered request can be processed unsuccessfully before returning a REDELIVERY_EXHAUSTED error. |  |
| Message Digest Algorithm a| String | Secure hashing algorithm to use if the *Use Secure Hash* field is `true`. If the payload of the message is a Java object, Mule ignores this value and returns the value that the payload’s `hashCode()` returned. |  |
| Message Identifier a| <<RedeliveryPolicyMessageIdentifier>> | Defines which strategy is used to identify the messages. |  |
| Object Store a| ObjectStore | Configures the object store that stores the redelivery counter for each message.  |  |
|===

[[RedeliveryPolicyMessageIdentifier]]
=== Redelivery Policy Message Identifier

Configures how to identify a redelivered message and how to find out when the message was redelivered.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Use Secure Hash a| Boolean | If `true`, Mule uses a secure hash algorithm to identify a redelivered message. |  |
| Id Expression a| String | One or more expressions that determine when a message was redelivered. You can set this property only if the *Use Secure Hash* field is `false`. |  |
|===

== See Also

* xref:index.adoc[Salesforce Data Cloud Connector Overview]
* https://help.mulesoft.com[MuleSoft Help Center]
